--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
-    "next-auth": "^4.3.4",
+    "next-auth": "^4.0.0-beta.7",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
