--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-auth": "^4.0.0-beta.7",
     "react": "18.1.0",
