--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^4.0.0-beta.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "recoil": "^0.7.4",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
